--- a/hw2.tex
+++ b/hw2.tex
@@ -76,6 +76,7 @@
     10000 & 0.1949 \\
     60000 & 0.1134 \\
   \end{tabular}
+\newpage
 \section*{Q2}
   \includegraphics[scale=0.3]{q2_full.jpg}
   \begin{tabular}{l|l}
@@ -90,6 +91,22 @@
     5000  & 0.1672 \\
     10000 & 0.139 \\
     60000 & 0.1269 \\
+  \end{tabular}
+
+\newpage
+\section*{Q2}
+  \includegraphics[scale=0.3]{q3_small.jpg}
+  \begin{tabular}{l|l}
+    \hline
+    Training Samples & Error Rate \\
+    \hline
+    100   & 0.2901 \\
+    200   & 0.2196 \\
+    500   & 0.1732 \\
+    1000  & 0.1341 \\
+    2000  & 0.1185 \\
+    5000  & 0.0981 \\
+    10000 & 0.0922 \\
   \end{tabular}
 
 \end{document}
