--- a/hw2.tex
+++ b/hw2.tex
@@ -94,19 +94,19 @@
   \end{tabular}
 
 \newpage
-\section*{Q2}
-  \includegraphics[scale=0.3]{q3_small.jpg}
+\section*{Q3}
+  \includegraphics[scale=0.3]{q3_normalized_tap.jpg}
   \begin{tabular}{l|l}
     \hline
     Training Samples & Error Rate \\
     \hline
-    100   & 0.2901 \\
-    200   & 0.2196 \\
-    500   & 0.1732 \\
-    1000  & 0.1341 \\
-    2000  & 0.1185 \\
-    5000  & 0.0981 \\
-    10000 & 0.0922 \\
+    100   & 0.1761 \\
+    200   & 0.1302 \\
+    500   & 0.0916 \\
+    1000  & 0.0736 \\
+    2000  & 0.0607 \\
+    5000  & 0.0548 \\
+    10000 & 0.0476 \\
   \end{tabular}
 
 \end{document}
