--- a/hw2.tex
+++ b/hw2.tex
@@ -94,7 +94,7 @@
   \end{tabular}
 
 \newpage
-\section*{Q3}
+\section*{Q3: PHOG Normalized Tap Filter}
   \includegraphics[scale=0.3]{q3_normalized_tap.jpg}
   \begin{tabular}{l|l}
     \hline
@@ -107,6 +107,23 @@
     2000  & 0.0607 \\
     5000  & 0.0548 \\
     10000 & 0.0476 \\
+  \end{tabular}
+
+
+\newpage
+\section*{Q3: PHOG Unnormalized Tap Filter}
+  \includegraphics[scale=0.3]{q3_unnormalized.jpg}
+  \begin{tabular}{l|l}
+    \hline
+    Training Samples & Error Rate \\
+    \hline
+    100   & 0.1849 \\
+    200   & 0.1250 \\
+    500   & 0.0996 \\
+    1000  & 0.0747 \\
+    2000  & 0.0638 \\
+    5000  & 0.0613 \\
+    10000 & 0.0597 \\
   \end{tabular}
 
 \end{document}
