--- a/hw2.tex
+++ b/hw2.tex
@@ -126,4 +126,20 @@
     10000 & 0.0597 \\
   \end{tabular}
 
+\newpage
+\section*{Q3: PHOG Normalized Gauss Filter}
+  \includegraphics[scale=0.3]{q3_normalized_gauss.jpg}
+  \begin{tabular}{l|l}
+    \hline
+    Training Samples & Error Rate \\
+    \hline
+    100   & 0.2092 \\
+    200   & 0.1538 \\
+    500   & 0.1177 \\
+    1000  & 0.1027 \\
+    2000  & 0.0907 \\
+    5000  & 0.0765 \\
+    10000 & 0.0626 \\
+  \end{tabular}
+
 \end{document}
