removing mcode.sty

--- a/hw2.tex
+++ b/hw2.tex
@@ -24,7 +24,7 @@
 
 % CS tools
 \usepackage{algorithmic}
-\usepackage[options]{mcode}
+%\usepackage[options]{mcode}
 
 % Header Settings
 \pagestyle{fancy}
