--- a/hw2.tex
+++ b/hw2.tex
@@ -62,84 +62,122 @@
 % Start of document
 \begin{document}
 \section*{Q1}
-  \includegraphics[scale=0.3]{q1_pixel_error.jpg}
-  \begin{tabular}{l|l}
-    \hline
-    Training Samples & Error Rate \\
-    \hline
-    100   & 0.2731 \\
-    200   & 0.2219 \\
-    500   & 0.1889 \\
-    1000  & 0.1774 \\
-    2000  & 0.177  \\
-    5000  & 0.1829 \\
-    10000 & 0.1949 \\
-    60000 & 0.1134 \\
-  \end{tabular}
+  \begin{enumerate}[a.]
+    \item \quad \\
+      \includegraphics[scale=0.3]{q1_pixel_error.jpg}
+      \begin{tabular}{l|l}
+        \hline
+        Training Samples & Error Rate \\
+        \hline
+        100   & 0.2731 \\
+        200   & 0.2219 \\
+        500   & 0.1889 \\
+        1000  & 0.1774 \\
+        2000  & 0.177  \\
+        5000  & 0.1829 \\
+        10000 & 0.1949 \\
+        60000 & 0.1134 \\
+      \end{tabular}
+  \end{enumerate}
 \newpage
 \section*{Q2}
-  \includegraphics[scale=0.3]{q2_full.jpg}
-  \begin{tabular}{l|l}
-    \hline
-    Training Samples & Error Rate \\
-    \hline
-    100   & 0.2608 \\
-    200   & 0.1975 \\
-    500   & 0.1754 \\
-    1000  & 0.1667 \\
-    2000  & 0.1528 \\
-    5000  & 0.1672 \\
-    10000 & 0.139 \\
-    60000 & 0.1269 \\
-  \end{tabular}
+  \begin{enumerate}[a]
+    \item Adding spatial pyramid features should help over raw pixel values for
+      a number of reasons. First, using pyramids allows us to examine an image
+      at a number of different scales (where larger pyramids correspond to
+      smaller scales). Second, using pyramids at various levels also performs
+      smoothing on the image. Even if there is an isolated errant pixel, at
+      larger window sizes such as $7 \times 7$, this lone pixel's intensity will
+      hardly make a difference, since we are summing 49 pixels
+      together. Essentially, high intensity pixels that are grouped with other
+      high intensity pixels will stay high intensity with larger window sizes,
+      whereas lone high intensity pixels will be smoothed out.
+    \item \quad \\
+      \includegraphics[scale=0.3]{q2_full.jpg}
+      \begin{tabular}{l|l}
+        \hline
+        Training Samples & Error Rate \\
+        \hline
+        100   & 0.2608 \\
+        200   & 0.1975 \\
+        500   & 0.1754 \\
+        1000  & 0.1667 \\
+        2000  & 0.1528 \\
+        5000  & 0.1672 \\
+        10000 & 0.139 \\
+        60000 & 0.1269 \\
+      \end{tabular}
+  \end{enumerate}
 
 \newpage
 \section*{Q3: PHOG Normalized Tap Filter}
-  \includegraphics[scale=0.3]{q3_normalized_tap.jpg}
-  \begin{tabular}{l|l}
-    \hline
-    Training Samples & Error Rate \\
-    \hline
-    100   & 0.1761 \\
-    200   & 0.1302 \\
-    500   & 0.0916 \\
-    1000  & 0.0736 \\
-    2000  & 0.0607 \\
-    5000  & 0.0548 \\
-    10000 & 0.0476 \\
-  \end{tabular}
+  \begin{enumerate}[a.]
+    \item Gradient orientations capture the orientations of edges in the
+      image. Essentially, when we use gradient orientations, we are identifying
+      the edges of the digit (and thus the outline). The idea is that the
+      distribution and orientations of edges in an image will be a strong
+      indicator of what digit is being represented. For instance, a '1' is
+      likely to have strong horizontal gradients along the center of the image,
+      whereas a '0' is likely to have strong gradients in all directions further
+      away from the center.
+    \item \quad \\
+      \includegraphics[scale=0.3]{q3_normalized_tap.jpg}
+      \begin{tabular}{l|l}
+        \hline
+        Training Samples & Error Rate \\
+        \hline
+        100   & 0.1761 \\
+        200   & 0.1302 \\
+        500   & 0.0916 \\
+        1000  & 0.0736 \\
+        2000  & 0.0607 \\
+        5000  & 0.0548 \\
+        10000 & 0.0476 \\
+      \end{tabular}
+  \end{enumerate}
 
 
 \newpage
 \section*{Q3: PHOG Unnormalized Tap Filter}
-  \includegraphics[scale=0.3]{q3_unnormalized.jpg}
-  \begin{tabular}{l|l}
-    \hline
-    Training Samples & Error Rate \\
-    \hline
-    100   & 0.1849 \\
-    200   & 0.1250 \\
-    500   & 0.0996 \\
-    1000  & 0.0747 \\
-    2000  & 0.0638 \\
-    5000  & 0.0613 \\
-    10000 & 0.0597 \\
-  \end{tabular}
+  \begin{enumerate}[c.]
+    \item Performing this normalization allows us to ignore absolute gradient
+      values and focus on the relative changes. This allows for better
+      invariance across images, since some images are darker than
+      others. Without normalization, a dark digit produces a feature vector with
+      a much larger norm than a light digit, which may cause them to seem
+      different when they actually portray the same digit. \\
+      \includegraphics[scale=0.3]{q3_unnormalized.jpg}
+      \begin{tabular}{l|l}
+        \hline
+        Training Samples & Error Rate \\
+        \hline
+        100   & 0.1849 \\
+        200   & 0.1250 \\
+        500   & 0.0996 \\
+        1000  & 0.0747 \\
+        2000  & 0.0638 \\
+        5000  & 0.0613 \\
+        10000 & 0.0597 \\
+      \end{tabular}
+  \end{enumerate}
 
 \newpage
 \section*{Q3: PHOG Normalized Gauss Filter}
-  \includegraphics[scale=0.3]{q3_normalized_gauss.jpg}
-  \begin{tabular}{l|l}
-    \hline
-    Training Samples & Error Rate \\
-    \hline
-    100   & 0.2092 \\
-    200   & 0.1538 \\
-    500   & 0.1177 \\
-    1000  & 0.1027 \\
-    2000  & 0.0907 \\
-    5000  & 0.0765 \\
-    10000 & 0.0626 \\
-  \end{tabular}
+  \begin{enumerate}[d.]
+    \item \quad \\
+      \includegraphics[scale=0.3]{q3_normalized_gauss.jpg}
+      \begin{tabular}{l|l}
+        \hline
+        Training Samples & Error Rate \\
+        \hline
+        100   & 0.2092 \\
+        200   & 0.1538 \\
+        500   & 0.1177 \\
+        1000  & 0.1027 \\
+        2000  & 0.0907 \\
+        5000  & 0.0765 \\
+        10000 & 0.0626 \\
+      \end{tabular}
+  \end{enumerate}
 
 \end{document}
