--- a/hw2.tex
+++ b/hw2.tex
@@ -28,12 +28,12 @@
 
 % Header Settings
 \pagestyle{fancy}
-\headsep = 35pt
-\setlength{\headheight}{20pt}
+\headsep = 15pt
+\setlength{\headheight}{60pt}
 
 
 % Header
-\rhead{\textsc{Eric Tzeng, Brandon Wang \\\footnotesize{\thedate} \\}}
+\rhead{\textsc{Eric Tzeng, Brandon Wang \\\footnotesize{eric.s.tzeng@gmail.com, brandonwang@berkeley.edu}\\\footnotesize{\thedate} \\}}
 \lhead{\Large \textsc{\assignment}}
 \cfoot{\large\thepage}
 
