--- a/README
+++ b/README
@@ -1,6 +1,16 @@
-Q1: run q1()
-Q2: run q2()
+CS280 HW2 Spring 2012
+Eric Tzeng, Brandon Wang
+
+Unless otherwise noted, the commands output a graph of the tests, and the 
+returned variable is a vector describing the number of tests classified 
+correctly by the filter/SVM, by each training set size, in ascending order.
+
+Q1: q1()
+Q2: q2()
 Q3:
-  Normalized    q3(false, true, false)
-  Unnormalized  q3(false, false, false)
-  Gaussian      q3(true, true, false)
+  (All 7 training sets)
+    Normalized    q3(false, true, false)
+    Unnormalized  q3(false, false, false)
+    Gaussian      q3(true, true, false)
+  (Only 7th training set, outputs time and images)
+    Gaussian      q3_single()
