[writeup] minor typo fix, but lgtm

--- a/hw2.tex
+++ b/hw2.tex
@@ -33,7 +33,7 @@
 
 
 % Header
-\rhead{\textsc{Eric Tzeng, Brandon Wang \\\footnotesize{eric.s.tzeng@gmail.com, brandonwang@berkeley.edu}\\\footnotesize{\thedate} \\}}
+\rhead{\textsc{Eric Tzeng, Brandon Wang \\\footnotesize{eric.tzeng@berkeley.edu, brandonwang@berkeley.edu}\\\footnotesize{\thedate} \\}}
 \lhead{\Large \textsc{\assignment}}
 \cfoot{\large\thepage}
 
@@ -202,6 +202,6 @@
   We used summed area tables in implementing the filters in Matlab. Our program
   trains against the 10000-sample training set in about 3 minutes, and test 
   against the 10000-sample test set in another 3 minutes, allowing us to test 
-  our filters using the 7th training set in $train_small.mat$ in about 6 minutes.
+  our filters using the 7th training set in $train\_small.mat$ in about 6 minutes.
 
 \end{document}
